<resources>
    <string name="app_name">Guided Tour</string>
    <string name="commercial">Commercial</string>
    <string name="single_residential">Single Family Residential</string>
    <string name="two_family_residential">Two Family Residential</string>
    <string name="multifamily">Multifamily</string>
    <string name="planning">Planning</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name = "press_back_button">"Press the device back button to get back"</string>

    <!-- headings for tabTitles for commercial buildings-->
    <string name = "medical_retail">Medical and Retail Buildings</string>
    <string name = "art_gallery">Art Gallery</string>
    <string name = "commercial_interiors">Commercial Interiors</string>

    <!-- Comercial activity fragment strings-->
    <string name = "comm1_name">Medical Building</string>
    <string name = "comm1_text">Art Deco 3,000 square-foot medical office building.  Totowa, NJ</string>
    <string name = "comm2_name">Retail Building</string>
    <string name = "comm2_text">Exterior renovation for chain retail store.  At the time it was designed, the client was Lauren by Ralph Lauren.   Flemington, NJ</string>

    <!-- CommercialInteriorFragment strings-->
    <string name = "commercial_interior1_name">Corporate Interior</string>
    <string name = "commercial_interior1_text">Reception and lobby for a law office</string>
    <string name = "commercial_interior2_name">Corporate Interior</string>
    <string name = "commercial_interior2_text">Conference room for a real estate development company</string>

    <!-- CommercialLinaFragment (art gallery)-->
    <string name = "art1_name">Lena DiGangi Gallery</string>
    <string name = "art1_text">First Floor renovation and Second floor addition of seminar space.  Totowa, NJ</string>
    <string name = "art2_name">Lena DiGangi Gallery</string>
    <string name = "art2_text">Original concept</string>

    <!-- MultifamilyActivity strings-->
    <string name = "residential1_name">Residential building</string>
    <string name = "residential1_text">21 unit residential complex of two-story dwelling units.  Pompton Lakes, NJ</string>
    <string name = "residential2_name">90 unit building</string>
    <string name = "residential2_text">Four story residential over covered parking. Rahway, NJ</string>
    <string name = "residential3_name">Multifamily study</string>
    <string name = "residential3_text">Multifamily building study on a triangular lot.  Rutherford, NJ</string>
    <string name = "residential4_name">Townhouses</string>
    <string name = "residential4_text">Two-unit townhouse building on a complex with 35 dwelling units. Wallington, NJ</string>

    <!-- PlanningActivity strings-->
    <string name = "planning1_name">Town house Development</string>
    <string name = "planning1_text">80 unit Victorian townhouse development.  Garfield, NJ</string>
    <string name = "planning2_name">Mixed use development</string>
    <string name = "planning2_text">1,700 residential units, 150,000 commercial space, 1,300 parking spaces. Jersey City, NJ</string>

    <!-- headers for tabTitles for single family projects-->
    <string name = "architecture">Architecture</string>
    <string name = "interior_design">Interior Design</string>

    <!-- SingleFamilyFragment strings-->
    <string name = "single1_name">French Chateau</string>
    <string name = "single1_text">9,500 square feet French Chateau with 5 bedrooms, 8 bathrooms, 18 rooms.  UpperSaddle River, NJ</string>
    <string name = "single2_name">Single Family Colonial</string>
    <string name = "single2_text">6,000 square foot single family with 6 bedrooms, 5 bathrooms.  Franklin Lakes, NJ</string>
    <string name = "single3_name">Second floor addition</string>
    <string name = "single3_text">Addition to a single family residence, Wayne, NJ</string>

    <!-- single family interior strings-->
    <string name = "single_interiors1_name">Living Room</string>
    <string name = "single_interiors1_text">Interior design for a Living Room creating focus areas of activities.  Upper Saddle River, NJ</string>
    <string name = "single_interiors2_name">Sitting Area</string>
    <string name = "single_interiors2_text">Sitting area, part of a Master Suite  Upper Saddle River, NJ</string>
    <string name = "single_interiors3_name">Foyer</string>
    <string name = "single_interiors3_text">Foyer design, part of a 30,000 square foot interiors contract. Saddle River, NJ</string>

    <!-- TwoFamilyActivity strings-->
    <string name = "two_family1_name">Traditional two family</string>
    <string name = "two_family1_text">Speculative two family project in a narrow lot (25ft x 100ft).  Paterson, NJ</string>
    <string name = "two_family2_name">Retail Building</string>
    <string name = "two_family2_text">Douplex two-family project in Passaic, NJ</string>

</resources>
