<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.myguidedtour.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/welcome_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="Welcome to a guided tour through my Architectural Porftolio"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_dark"/>

            <!-- Commercial category -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:id="@+id/commercial"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:drawSelectorOnTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp">

                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="@dimen/project_category_height"
                        android:layout_weight="2"
                        android:src="@drawable/amato"/>

                    <TextView
                         style="@style/portfolio_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/commercial"/>
                </LinearLayout>
            </FrameLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_dark"/>

            <!-- Single family category -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:id="@+id/single_family"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:drawSelectorOnTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp">

                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="@dimen/project_category_height"
                        android:layout_weight="2"
                        android:src="@drawable/single_rubino"/>

                    <TextView
                        style="@style/portfolio_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/single_residential"/>
                </LinearLayout>
            </FrameLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_dark"/>


            <!-- Two family category -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:id="@+id/two_family"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:drawSelectorOnTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp">

                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="@dimen/project_category_height"
                        android:layout_weight="2"
                        android:src="@drawable/twofam_1"/>

                    <TextView
                        style="@style/portfolio_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/two_family_residential"/>
                </LinearLayout>
            </FrameLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_dark"/>

            <!-- Multifamily category -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:id="@+id/multifamily"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:drawSelectorOnTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp">

                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="@dimen/project_category_height"
                        android:layout_weight="2"
                        android:src="@drawable/multi_rutherford"/>

                    <TextView
                        style="@style/portfolio_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/multifamily"/>
                </LinearLayout>
            </FrameLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_dark"/>

            <!-- Planning category -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:id="@+id/planning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:drawSelectorOnTop="true"
                    android:background="?android:attr/selectableItemBackground"
                    android:paddingLeft="16dp">

                    <ImageView
                        android:layout_width="350dp"
                        android:layout_height="@dimen/project_category_height"
                        android:layout_weight="2"
                        android:src="@drawable/plan_hamlet"/>

                    <TextView
                        style="@style/portfolio_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/planning"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
